fix for margins on mobile (#4761)
* fix for margins on mobile

* add padding

* right true/false

* hide dai alert for trading tutorial

* add disputing margins

--- a/packages/augur-ui/src/modules/market/components/market-view/market-view.styles.less
+++ b/packages/augur-ui/src/modules/market/components/market-view/market-view.styles.less
@@ -8,6 +8,7 @@
   &.Inactive {
     pointer-events: none;
     min-width: 100%;
+    padding-bottom: 40px;
   }
 
   > span:first-of-type {
