--- a/packages/augur-ui/src/modules/markets-list/components/markets-view.styles.less
+++ b/packages/augur-ui/src/modules/markets-list/components/markets-view.styles.less
@@ -5,7 +5,7 @@
   margin: auto;
 
   @media @breakpoint-mobile {
-    margin: unset;
+    margin: 0 @size-14;
   }
 
   > div:first-of-type {
